# SSMZP

./: .gitignore  CMakeLists.txt  MapMarbleDelegate.cpp  MapMarbleTrassa.cpp  MapMarbleTrassa.h  MapSettings.cpp  MapSettings.h  README.md  TMicsellFunction.cpp  VectorModel.cpp  connectDataBase.cpp  connectDataBase.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mathModelSpacecraft.cpp  settingsTreeItem.cpp  settingsTreeItem.h  settingsTreeView.cpp  settingsTreeView.h  stateVectorDelegate.cpp  stateVectorDelegate.h  stateVectorModel.cpp  stateVectorModel.h  stateVectorShell.cpp  stateVectorShell.h  styles.css  xyz2blh.cpp
.github/workflows/: c-cpp.yml
inc/chartEstimate/: SWcharts.h
inc/scan/: scanMethod.h
mathCons/: CMakeLists.txt  mathCons
res/: resourse.qrc
src/: SWcharts.cpp  connectDataBase.cpp
src/chartEstimate/: SWcharts.cpp  qcustomplot.cpp
src/scan/: scanMethod.cpp
